fixed spacing on messages

--- a/amethyst.theme.css
+++ b/amethyst.theme.css
@@ -1520,7 +1520,7 @@ div[id="---new-messages-bar"]>span {
   border-radius: var(--border-radius-1) !important;
 }
 .scrollerInner-2PPAp2>.scrollerSpacer-3AqkT9 {
-  padding-bottom: 48px;
+  padding-bottom: 56px;
 }
 
 .chatContent-3KubbW {
